--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -37,6 +37,11 @@ h1 {
   flex-wrap: nowrap;
 }
 
+.row-mobile {
+  justify-content: space-evenly;
+  display: flex;
+}
+
 .link {
     display: flex;
     text-decoration: none;
